Refactor: collect(toList()) replaced with toList()